# Algorithm

./: .gitignore  CMakeLists.txt  README.md
0-Solving/: puzzle.c
00-Solving/: nts_assignment.cpp  woowahan02_01.cpp  woowahan02_0102.cpp  woowahan02_03.cpp  woowahan1.java  woowahan2.java  woowahan3.sql  woowahan4.java  woowahan5.java
01-Arithmetic/: 1003.cpp  10039.cpp  1008.cpp  1009.cpp  10164.cpp  1065.cpp  10773.cpp  10817.cpp  1085.cpp  10869.cpp  10871.cpp  1094.cpp  10950.cpp  10952.cpp  11050.cpp  1110.cpp  11365.cpp  1157.cpp  11654.cpp  11719.cpp  11812.cpp  1193.cpp  1337.cpp  14490.cpp  1456.cpp  1476.cpp  1546.cpp  1700.cpp  1920.cpp  1946.cpp  2439.cpp  2444.cpp  2490.cpp  2577.cpp  2675.cpp  2739.cpp  2747.cpp  2748.cpp  2750.cpp  2816.cpp  (+48 more)
02-Stack/: 3015.cpp  4949.cpp  6549.cpp  9012.cpp  match.c  oasis.cpp  str_explosion.cpp  string_explosion.cpp
03-Queue/: 10845.cpp  10866.cpp  11286.cpp  1158.cpp
03-Recursive and Back Tracking/: clock.c  digit_sum.c  test4.c
04-Recursive and Back Tracking/: dictionary.c  dictionary_simple.c  make_binary.c  scpc5.cpp  test5.c
05-Binary Search/: 10815.cpp  memorize.c
05-Quick Sort/: subtract.c
06-DFS/: dfs.c  peg_solitaire.c  restudy_password.c
06-Quick Sort/: 1026.cpp  11650.cpp  basic.cpp  memorize_answer.c  prac.cpp  quicksort.c  quicksort_remind.c
07-BFS/: bfs_dfs.c  catchme_okhee.c  island.c  marathon.c  worm.c
07-DFS/: dfs_dovelet.c  mad_robot.c
07-Graph/: 1613.cpp  2146.cpp  9466.cpp  bipartie_graph.cpp  work.cpp
07-Graph/00-DFS/: 1325.cpp  1937.cpp  virus.c
08-BFS/: biggest_shom.c  driving_license.cpp  graph_virus.c  iceberg.cpp  prime_path.c  prime_path_re.c
08-Dynamic Programming/: 10835.cpp  11052.cpp  11060.cpp  11727.cpp  1309.cpp  1463.cpp  2011.cpp  2156.cpp  2186.cpp  2225.cpp  2240.cpp  2293.cpp  2352.cpp  2618.cpp  2688.cpp  coin.cpp  electronic_lis.c  jump.cpp  knapsack.cpp  lis_nlogn.c  merge_files.cpp  paint.c  palindrome.cpp  scpc2.cpp  scpc2_2016_2.cpp  section.cpp  ski_game.cpp  tiling.cpp
09-Dijkstra/: campus_dijkstra.c
09-Dynamic Programming/: add_file.cpp  downhill.cpp  fibo.cpp  jump.cpp  lcs.c  lis_answer.cpp  move.cpp  palindrome.cpp
09-KMP/: basic.cpp
1-Arithmetic/: anniversary.c  backspace.c  blogger.c  calendar.c  chessboard.c  face.c  guitar.c  openclose.c  reverse.c  shom666.c  tile.c
11-SQL/: basic_select.sql  count.sql  join1.sql  join2.sql  like.sql  likenot.sql  minmax.sql  rlike.sql  select.sql  select2.sql  select3.sql  select4.sql  select5.sql  select6.sql  select7.sql  select8.sql  select9.sql  select_all.sql  select_id.sql
150710~150713/: ant.c  ant3.c  bomb.c  changeCase.c  divide.c  function.c  kwpattern.c  laughvirus.c  laughvirus_while.c  mallocPractice.c  myqueue.c  numrules.c  queue.c  randomsum.c  sosu.c  stack.c  struct.c  triangle.c  zzzzzzzz.c
150714/: password.c
150715(stack)/: cowhead.c  match.c  sequence.cpp  train.c  value_match.c
150717(recursive)/: laugh_virus_bfs.c  laugh_virus_recursive.c  mountain_height.c
150720(recursive2)/: compare_bracket.c  narrow_way(wolf).c  nqueen.c
150721(restudy)/: jug.c  laugh_virus.c  password.c  reverse.c
150722(dfs)/: danji.c  maze.c  maze_search.c
150723-150724(bfs)/: catchme.c  driving_license.cpp  move_knight.c  others_safe.c  scales.c  tomato.c  treasure_island.c
150724(dynamic programming)/: bridge.cpp  coin.cpp  coin2.cpp  lis.cpp  max_sum_on_triangle.cpp  stamp.c
150728(restudy)/: memorize.c  shom.c  stack.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
150729(practice)/: anniversary.c  electronic.c  electronic_lis.c  peg_solitaire.c  puzzle.c
150730/: circulated_list.c  memorize_answer.c  shom666.c
150731/: digit_sum.c  lcs.c  quicksort_remind.c  subtract.c
150801/: decrease_num.c  subset_sum.c
150802/: door_man.c  guitar.c  guitar_bfs.c  phone.c  white_chess.c
150804(test)/: ball.c  candy.cpp  robot.c
150805/: diet.cpp  picnic.cpp  stdlib_exam.c
150808/: knapsack_re.c
151017/: block.c  block_hansol.cpp  study.c
151024/: campus_dfs.c  double_dabble.c  equal_number.c  frog.c  frog_bfs.c  mirror.c
151028/: cube.c  rent.c
151114/: a_sequence.c
160221/: cheese.c
2-Stack/: stonewall.c
3-Recursive and Back Tracking/: color.c  door_man.c  queen_recur.c
5-Quick Sort/: test6.c
6-DFS/: nqeen_dfs.c
7-BFS/: safe_region.c  shom.c
8-Dynamic Programming/: knapsack1.c  stamp.c
Hackerrank 30days/: day0.kt  day1  day1.cpp  day10.kt  day11.kt  day12.java  day13.java  day14.java  day15.java  day16.java  day17.java  day18.java  day19.java  day2  day2.cpp  day20.java  day21.java  day22.java  day23.java  day24.java  day25.cpp  day26.java  day27.java  day28.java  day3.kt  day30.java  day4.java  day5.kt  day6.c  day7.kt  day8.kt  day9.kt
bfs(150723~)/: tomato_2d.c  virus_remind.c
dfs(150722~)/: alphabet_dfs.c  treasure_island.c
(+20 files in other folders)
