cmake_minimum_required(VERSION 3.3)
project(algorithm)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    150710~150713/ant.c
    150710~150713/ant3.c
    150710~150713/arrayPractice.c
    150710~150713/backspace.c
    150710~150713/bomb.c
    150710~150713/calendar.c
    150710~150713/changeCase.c
    150710~150713/chessboard.c
    150710~150713/clock.c
    150710~150713/cowhead.c
    150710~150713/divide.c
    150710~150713/function.c
    150710~150713/gunshot.c
    150710~150713/kwpattern.c
    150710~150713/laughvirus.c
    150710~150713/laughvirus_while.c
    150710~150713/mallocPractice.c
    150710~150713/match.c
    150710~150713/movesite.c
    150710~150713/myqueue.c
    150710~150713/numrules.c
    150710~150713/openclose.c
    150710~150713/pointer.c
    150710~150713/practice.c
    150710~150713/queue.c
    150710~150713/randomsum.c
    150710~150713/sosu.c
    150710~150713/stack.c
    150710~150713/struct.c
    150710~150713/triangle.c
    150710~150713/wordNum.c
    150710~150713/zzzzzzzz.c
    150714/amstrong.c
    150714/face.c
    150714/graph_tree.c
    150714/istree.c
    150714/password.c
    150714/tile.c
    "150715(stack)/cowhead.c"
    "150715(stack)/match.c"
    "150715(stack)/stonewall.c"
    "150715(stack)/train.c"
    "150715(stack)/value_match.c"
    "150716(bfs)/cowsum.c"
    "150716(bfs)/graph_virus.c"
    "150716(bfs)/police.c"
    "150716(bfs)/police_re.c"
    "150716(bfs)/prime_way.c"
    "150717(recursive)/dictionary.c"
    "150717(recursive)/dictionary_simple.c"
    "150717(recursive)/laugh_virus_bfs.c"
    "150717(recursive)/make_binary.c"
    "150717(recursive)/mountain_height.c"
    "150720(recursive2)/others/nqueen.c"
    "150720(recursive2)/others/Source.cpp"
    "150720(recursive2)/clock.c"
    "150720(recursive2)/color.c"
    "150720(recursive2)/compare_bracket.c"
    "150720(recursive2)/narrow_way(wolf).c"
    "150720(recursive2)/nqueen.c"
    "150721(restudy)/jug.c"
    "150721(restudy)/laugh_virus.c"
    "150721(restudy)/password.c"
    "150721(restudy)/queen_recur.c"
    "150721(restudy)/rectangle.c"
    "150721(restudy)/reverse.c"
    "150721(restudy)/tee.c"
    "150728(restudy)/memorize.c"
    "150728(restudy)/paint.c"
    "150728(restudy)/quicksort.c"
    "150728(restudy)/shom.c"
    "150728(restudy)/stack.c"
    "150728(restudy)/test1.c"
    "150728(restudy)/test2.c"
    "150728(restudy)/test3.c"
    "150728(restudy)/test4.c"
    "150728(restudy)/test5.c"
    "150728(restudy)/test6.c"
    "150729(practice)/anniversary.c"
    "150729(practice)/electronic.c"
    "150729(practice)/electronic_lis.c"
    "150729(practice)/peg_solitaire.c"
    "150729(practice)/puzzle.c"
    150730/circulated_list.c
    150730/memorize_answer.c
    150730/shom666.c
    150731/digit_sum.c
    150731/lcs.c
    150731/quicksort_remind.c
    150731/subtract.c
    150801/decrease_num.c
    150801/prime_path_re.c
    150801/subset_sum.c
    150802/door_man.c
    150802/guitar.c
    150802/guitar_bfs.c
    150802/phone.c
    150802/region.c
    150802/white_chess.c
    "150804(test)/ball.c"
    "150804(test)/candy.cpp"
    "150804(test)/robot.c"
    "150804(test)/wheel.c"
    150805/diet.cpp
    150805/picnic.cpp
    150805/ski_game.cpp
    150805/stdlib_exam.c
    150808/knapsack1.c
    150808/knapsack_re.c
    150907/guitar.c
    151017/block.c
    151017/block_hansol.cpp
    151017/study.c
    151024/campus_dfs.c
    151024/campus_dijkstra.c
    151024/double_dabble.c
    151024/equal_number.c
    151024/frog.c
    151024/frog_bfs.c
    151024/mirror.c
    151028/cube.c
    151028/rent.c
    "bfs(150723~)/bfs_dfs.c"
    "bfs(150723~)/biggest_shom.c"
    "bfs(150723~)/catchme.c"
    "bfs(150723~)/catchme_okhee.c"
    "bfs(150723~)/driving_license.cpp"
    "bfs(150723~)/island.c"
    "bfs(150723~)/move_knight.c"
    "bfs(150723~)/others_safe.c"
    "bfs(150723~)/prime_path.c"
    "bfs(150723~)/queue_bfs.c"
    "bfs(150723~)/safe_region.c"
    "bfs(150723~)/scales.c"
    "bfs(150723~)/shom.c"
    "bfs(150723~)/tomato.c"
    "bfs(150723~)/treasure_island.c"
    "bfs(150723~)/worm.c"
    "dfs(150722~)/danji.c"
    "dfs(150722~)/dfs.c"
    "dfs(150722~)/dfs_dovelet.c"
    "dfs(150722~)/mad_robot.c"
    "dfs(150722~)/maze.c"
    "dfs(150722~)/maze_search.c"
    "dfs(150722~)/nqeen_dfs.c"
    "dfs(150722~)/restudy_password.c"
    "dfs(150722~)/virus.c"
    "dp(150724~)/add_file.cpp"
    "dp(150724~)/bridge.cpp"
    "dp(150724~)/coin.cpp"
    "dp(150724~)/coin2.cpp"
    "dp(150724~)/knapsack.cpp"
    "dp(150724~)/lis.cpp"
    "dp(150724~)/lis_answer.cpp"
    "dp(150724~)/lis_nlogn.c"
    "dp(150724~)/max_sum_on_triangle.cpp"
    "dp(150724~)/stamp.c"
    "dp(150724~)/tiling.cpp")

add_executable(algorithm ${SOURCE_FILES})